WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42437
white-space: pre text containing tabs is not laid out correctly when the font lacks a space glyph
https://bugs.webkit.org/show_bug.cgi?id=42437
Summary
white-space: pre text containing tabs is not laid out correctly when the font...
mitz
Reported
2010-07-15 18:32:22 PDT
Tab width calculation in WidthIterator and ComplexTextController uses Font::tabWidth(), which is based on Font::spaceWidth(). When the specified font lacks a space glyph, spaceWidth() will be 0 or otherwise wrong. Instead, the width of the space glyph from the fallback font should be used. Patch forthcoming.
Attachments
Use the width of the space glyph from the font that supplies the space glyph
(2.70 KB, patch)
2010-07-16 00:00 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-07-15 18:34:11 PDT
<
rdar://problem/8198266
>
mitz
Comment 2
2010-07-16 00:00:18 PDT
Created
attachment 61770
[details]
Use the width of the space glyph from the font that supplies the space glyph
Anders Carlsson
Comment 3
2010-07-16 09:00:58 PDT
Comment on
attachment 61770
[details]
Use the width of the space glyph from the font that supplies the space glyph Looks like you can remove Font::tabWidth now. r=me
mitz
Comment 4
2010-07-16 09:09:06 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/63556
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug