<rdar://problem/8198266> white-space: pre text containing tabs is not laid out correctly when the font lacks a space glyph https://bugs.webkit.org/show_bug.cgi?id=42437

Reviewed by Anders Carlsson.

No test because none of the fonts available to DumpRenderTree are missing a space glyph.

Changed the tab width computation to use the width of the space glyph from the font that has
a space glyph, which may be a fallback font if the primary font lacks a space glyph.

* platform/graphics/Font.h: Removed Font::tabWidth().
* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advance):
* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):



Canonical link: https://commits.webkit.org/54396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63556 268f45cc-cd09-0410-ab3c-d52691b4dbfc